--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
+            gap: 90px;
+        }
+        .cosas{
+            display: flex;
+            flex-direction: row;
+            gap: 60px;
         }
         .tablero{
             display: flex;
@@ -26,20 +33,57 @@
             font-size: 200px;
             text-align: center;
         }
+        .clasificacion{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 70px;
+        }
+        .contador{
+            border: 1px solid black;
+            text-align: center;
+            width: 100px;
+            height: 80px;
+        }
+
+        .jugador{
+            border-bottom: 1px solid black;
+        }
+
     </style>
 </head>
 <body>
-    <div class="tablero">
-        <div class="casilla" onclick="agregarFicha(0)"></div>
-        <div class="casilla" onclick="agregarFicha(1)"></div>
-        <div class="casilla" onclick="agregarFicha(2)"></div>
-        <div class="casilla" onclick="agregarFicha(3)"></div>
-        <div class="casilla" onclick="agregarFicha(4)"></div>
-        <div class="casilla" onclick="agregarFicha(5)"></div>
-        <div class="casilla" onclick="agregarFicha(6)"></div>
-        <div class="casilla" onclick="agregarFicha(7)"></div>
-        <div class="casilla" onclick="agregarFicha(8)"></div>
+    <div class="cosas">
+        <div class="tablero">
+            <div class="casilla" onclick="agregarFicha(0)"></div>
+            <div class="casilla" onclick="agregarFicha(1)"></div>
+            <div class="casilla" onclick="agregarFicha(2)"></div>
+            <div class="casilla" onclick="agregarFicha(3)"></div>
+            <div class="casilla" onclick="agregarFicha(4)"></div>
+            <div class="casilla" onclick="agregarFicha(5)"></div>
+            <div class="casilla" onclick="agregarFicha(6)"></div>
+            <div class="casilla" onclick="agregarFicha(7)"></div>
+            <div class="casilla" onclick="agregarFicha(8)"></div>
+        </div>
+        <div class="clasificacion">
+            <div class="contador">
+                <p class="jugador">Jugador O</p>
+                <p class="numero">0</p>
+            </div>
+            <div class="contador">
+                <p class="jugador">Jugador X</p>
+                <p class="numero">0</p>
+            </div>
+            <div class="contador">
+                <p class="jugador">Tablas</p>
+                <p class="numero">0</p>
+            </div>
+
+        </div>
     </div>
+
+    <button type="button">Reiniciar</button>
 </body>
 <script src="app.js"></script>
 </html>
